2001-05-14  Chema Celorio  <chema@celorio.com>

	* time-conf.in: tested in RH 7.1. Add the platform

2001-05-13  Chema Celorio  <chema@celorio.com>

	* internetsharing-conf.in (conf_get_replace_table): initial code for
	this tool. It is not doing a lot right now

2001-05-12  Chema Celorio  <chema@celorio.com>

	* time-conf.in (xml_parse): small typo

2001-05-12  Hans Petter Jansson  <hpj@ximian.com>

	* time-conf.in: Fixed timezone write bug.

2001-05-10  Hans Petter Jansson  <hpj@ximian.com>

	* report.pl.in: Added new key to message table.

2001-05-10  Hans Petter Jansson  <hpj@ximian.com>

	* parse.pl.in (xst_parse_split_hash_with_continuation): Implement.

2001-05-10  Hans Petter Jansson  <hpj@ximian.com>

	* disks-conf.in: Include '-' in fstab option matching.

2001-05-10  Hans Petter Jansson  <hpj@ximian.com>

	* network.pl.in: For redhat-7.0, smb.conf is in /etc/samba/smb.conf. Make
	  a new pair of parse/replace-tables for this.

2001-05-09  Hans Petter Jansson  <hpj@ximian.com>

	* filesys.pl.in (xst_filesys_info_get_network_host): Implement.
	  (xst_filesys_info_set_network_host): Implement.
	  (xst_filesys_info_get_network_path): Implement.
	  (xst_filesys_info_set_network_path): Implement.
	  (xst_filesys_info_get_mounted): Implement.
	  (xst_filesys_info_set_mounted): Implement.
	  (xst_filesys_info_get_permanent): Implement.
	  (xst_filesys_info_set_permanent): Implement.
	  (xst_filesys_info_get_detected): Implement.
	  (xst_filesys_info_set_detected): Implement.
	  (xst_filesys_table_set_mounted_true): Implement.
	  (xst_filesys_table_set_permanent_true): Implement.
	  (xst_filesys_table_set_detected_true): Implement.
	  (xst_filesys_parse_fstab): Parse network-specific options.
	  (xst_filesys_parse_mtab): Ditto.

2001-05-09  Arturo Espinosa Aldama  <arturo@ximian.com>

	* 0.4 RELEASE

2001-05-09  Hans Petter Jansson  <hpj@ximian.com>

	* time-conf.in: Red Hat 7.0 timezone fix from Arturo.

2001-05-09  Arturo Espinosa Aldama  <arturo@ximian.com>
